--- a/about_me.html
+++ b/about_me.html
@@ -29,7 +29,7 @@
     </header>
     
     <main id="main">
-        <div class="introduction"> Hover over an image to enlarge it! </div>
+        <div class="introduction"> Hover/tap an image to enlarge it! </div>
         <div class="about-me">
             <div id="evelyn-note" class="red" >
                 <span>My name is Evelyn!</span>
