tier list completed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/icon.png" sizes="32x32">
-    <title>About Me</title>
+    <title>Home</title>
 </head>
 <body>
     <a class="skip" tabindex="0" href="#main">Skip To Main Content</a>
@@ -27,7 +27,7 @@
     </header>
     
     <main id="main">
-
+        Hello! Click <a href="about_me.html">here</a> to go to the "About Me" page, and click <a href = "tier_list.html">here</a> to go to my personal tier list of sanrio characters!
     </main>
     
 </body>
