--- a/tier_list.html
+++ b/tier_list.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tier_list.css">
     <link rel="icon" href="images/icon.png" sizes="32x32">
-    <title>About Me</title>
+    <title>Tier List</title>
 </head>
 <body>
     <a class="skip" tabindex="0" href="#main">Skip To Main Content</a>
@@ -28,7 +28,91 @@
     </header>
     
     <main id="main">
-
+        <div class="introduction">Hover/tap an image to enlarge it and see the character's name!</div>
+        <div id="tier_list">
+            <div class="s tier">
+                <div class="letter">S</div>
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/keroppi.png" alt="Sanrio Character Keroppi"> <!--https://hellokitty.fandom.com/wiki/Keroppi-->
+                    <span>Keroppi</span>
+                </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/tuxedosam.png" alt="Sanrio Character Tuxedosam"> <!--https://hellokitty.fandom.com/wiki/Keroppi-->
+                    <span>Tuxedosam</span>
+                </div> 
+            </div>
+            <div class="a tier">
+                <div class="letter">A</div>
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/chococat.png" alt="Sanrio Character Chococat"> <!--https://hotcore.info/babki/chococat-icon.htm-->
+                    <span>Chococat</span>
+                </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/cinamoroll.png" alt="Sanrio Character Cinamoroll"> <!--https://www.pinterest.com/pin/cinnamoroll-app-icon-pfp--643451865513941717/-->
+                    <span>Cinamoroll</span>
+                </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/monkichi.png" alt="Sanrio Character Monkichi"> <!--https://hellokitty.fandom.com/wiki/Pompompurin-->
+                    <span>Monkichi</span>
+                </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/aggretsuko.png" alt="Sanrio Character Aggretsuko"> <!--https://hellokitty.fandom.com/wiki/Pompompurin-->
+                    <span>Aggretsuko</span>
+                </div> 
+            </div>
+            <div class="b tier">
+                <div class="letter">B</div>
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/badtz_maru.png" alt="Sanrio Character Badtz-Maru"> <!--https://hellokitty.fandom.com/wiki/Badtz-Maru-->
+                    <span>Badtz-Maru</span>
+                </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/kuromi.png" alt="Sanrio Character Kuromi"> <!--https://fantendo.fandom.com/wiki/Kuromi-->
+                    <span>Kuromi</span>
+                </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/pochacco.png" alt="Sanrio Character Pochacco"> <!--https://fantendo.fandom.com/wiki/Kuromi-->
+                    <span>Pochacco</span>
+                </div> 
+            </div>
+            <div class="c tier">
+                <div class="letter">C</div>
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/hello_kitty.png", alt="Sanrio Character Hello Kitty"> <!--https://www.newyorker.com/humor/daily-shouts/truth-hello-kitty-->
+                    <span>Hello Kitty</span>
+                </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/pompompurin.png" alt="Sanrio Character Pompompurin"> <!--https://hellokitty.fandom.com/wiki/Pompompurin-->
+                    <span>Pompompurin</span>
+                </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/my_melody.png", alt="Sanrio Character My Melody"> <!--https://hellokitty.fandom.com/wiki/My_Melody-->
+                    <span>My Melody</span>
+                </div> 
+            </div>
+            <div class="d tier">
+                <div class="letter">D</div>
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/pekkle.png", alt="Sanrio Characters Pekkle"> <!--https://hellokitty.fandom.com/wiki/My_Melody-->
+                    <span>Pekkle</span>
+                </div>
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/gudetama.png", alt="Sanrio Characters Gudetama"> <!--https://hellokitty.fandom.com/wiki/My_Melody-->
+                    <span>Gudetama</span>
+                </div> 
+            </div>
+            <div class="f tier">
+                <div class="letter">F</div>
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/kiki_lala.png", alt="Sanrio Characters Kiki and Lala"> <!--https://hellokitty.fandom.com/wiki/My_Melody-->
+                    <span>Kiki and Lala</span>
+                </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/charmi_kitty.png", alt="Sanrio Characters Charmi Kitty"> <!--https://hellokitty.fandom.com/wiki/My_Melody-->
+                    <span>Charmi Kitty</span>
+                </div> 
+            </div>
+        </div>
     </main>
     
 </body>
