prefers-reduced-motion

--- a/tier_list.html
+++ b/tier_list.html
@@ -37,7 +37,7 @@
                     <span>Keroppi</span>
                 </div> 
                 <div tabindex = "0" class="img-wrapper">
-                    <img src="images/tuxedosam.png" alt="Sanrio Character Tuxedosam"> <!--https://hellokitty.fandom.com/wiki/Keroppi-->
+                    <img src="images/tuxedosam.png" alt="Sanrio Character Tuxedosam"> <!--https://createcore.tumblr.com/post/682460452513628160/blue-tuxedo-sam-icons-likerb-if-used-->
                     <span>Tuxedosam</span>
                 </div> 
             </div>
@@ -52,13 +52,9 @@
                     <span>Cinamoroll</span>
                 </div> 
                 <div tabindex = "0" class="img-wrapper">
-                    <img src="images/monkichi.png" alt="Sanrio Character Monkichi"> <!--https://hellokitty.fandom.com/wiki/Pompompurin-->
+                    <img src="images/monkichi.png" alt="Sanrio Character Monkichi"> <!--https://digitalcitizen.ca/2010/05/08/hello-kitty-and-sanrio-characters-horizontal-backgrounds-for-blackberry-and-htcs-480x320-pixels/blackberry-backgrounds-420-x-320-pixels-420x320-pixels-54/-->
                     <span>Monkichi</span>
-                </div> 
-                <div tabindex = "0" class="img-wrapper">
-                    <img src="images/aggretsuko.png" alt="Sanrio Character Aggretsuko"> <!--https://hellokitty.fandom.com/wiki/Pompompurin-->
-                    <span>Aggretsuko</span>
-                </div> 
+                </div>  
             </div>
             <div class="b tier">
                 <div class="letter">B</div>
@@ -71,9 +67,13 @@
                     <span>Kuromi</span>
                 </div> 
                 <div tabindex = "0" class="img-wrapper">
-                    <img src="images/pochacco.png" alt="Sanrio Character Pochacco"> <!--https://fantendo.fandom.com/wiki/Kuromi-->
+                    <img src="images/pochacco.png" alt="Sanrio Character Pochacco"> <!--https://www.pinterest.com/pin/green-pochacco-icon--666673551094314042/-->
                     <span>Pochacco</span>
                 </div> 
+                <div tabindex = "0" class="img-wrapper">
+                    <img src="images/aggretsuko.png" alt="Sanrio Character Aggretsuko"> <!--https://underthehollywoodsign.wordpress.com/2020/10/22/aggretsuko-netflixs-brilliant-anime-series/-->
+                    <span>Aggretsuko</span>
+                </div>
             </div>
             <div class="c tier">
                 <div class="letter">C</div>
@@ -93,7 +93,7 @@
             <div class="d tier">
                 <div class="letter">D</div>
                 <div tabindex = "0" class="img-wrapper">
-                    <img src="images/pekkle.png", alt="Sanrio Characters Pekkle"> <!--https://hellokitty.fandom.com/wiki/My_Melody-->
+                    <img src="images/pekkle.png", alt="Sanrio Characters Pekkle"> <!--http://sanrio.shoutwiki.com/wiki/Ahiru_no_Pekkle-->
                     <span>Pekkle</span>
                 </div>
                 <div tabindex = "0" class="img-wrapper">
@@ -104,11 +104,11 @@
             <div class="f tier">
                 <div class="letter">F</div>
                 <div tabindex = "0" class="img-wrapper">
-                    <img src="images/kiki_lala.png", alt="Sanrio Characters Kiki and Lala"> <!--https://hellokitty.fandom.com/wiki/My_Melody-->
+                    <img src="images/kiki_lala.png", alt="Sanrio Characters Kiki and Lala"> <!--https://www.pinterest.com/pin/273241902372458794/-->
                     <span>Kiki and Lala</span>
                 </div> 
                 <div tabindex = "0" class="img-wrapper">
-                    <img src="images/charmi_kitty.png", alt="Sanrio Characters Charmi Kitty"> <!--https://hellokitty.fandom.com/wiki/My_Melody-->
+                    <img src="images/charmi_kitty.png", alt="Sanrio Characters Charmi Kitty"> <!--https://ofburntbreadsandlazyeggs.tumblr.com/post/157230491060/happy-valentines-day-from-gudetama-->
                     <span>Charmi Kitty</span>
                 </div> 
             </div>
