image references, footer, tweaks

--- a/about_me.html
+++ b/about_me.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/about_me.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Patrick Hand">
-    <link rel="icon" href="images/icon.png" sizes="32x32">
+    <link rel="icon" href="images/icon.png" sizes="32x32"> <!--https://keroppirecippi.wordpress.com/-->
     <title>About Me</title>
 </head>
 <body>
     <a class="skip" tabindex="0" href="#main">Skip To Main Content</a>
     <header>
         <nav>
-            <div class="logo_wrapper"><img src="images/icon.png" alt="keroppi logo"></div>
+            <div class="logo_wrapper"><img src="images/icon.png" alt="keroppi logo"> <!--https://keroppirecippi.wordpress.com/--> </div>
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li class="active"><a href = "about_me.html">About Me</a></li>
                 <li><a href = "tier_list.html">Tier List</a></li>
             </ul>
         </nav>
-        <div id="cover">
+        <div id="cover"> <!--https://cutewallpaper.org/21/cute-keroppi-wallpaper/Download-Gambar-Wallpaper-Keroppi-Kumpulan-Wallpaper.html-->
             <h1>About Me</h1>
         </div>
 
@@ -39,7 +39,7 @@
             <div id="keroppi-note" class="yellow" >
                 <span>My favorite Hello Kitty character is Keroppi!</span>
             </div>
-            <img id="keroppi-pic" tabindex="0" src="images/keroppi.png" alt="keroppi from the hello kitty universe">
+            <img id="keroppi-pic" tabindex="0" src="images/keroppi.png" alt="keroppi from the hello kitty universe"> <!--https://fantendo.fandom.com/wiki/Kuromi-->
 
             <div id="pets-note" class="blue">
                 <span>I have two cats and a chinchilla!</span> 
@@ -66,9 +66,12 @@
             <div id="layton-note" class="red">
                 <span>My favorite puzzle game is Professor Layton.</span> 
             </div>
-            <img id="layton-pic" tabindex="0" src="images/game.png" alt="a screenshot from the game professor layton">
+            <img id="layton-pic" tabindex="0" src="images/game.png" alt="a screenshot from the game professor layton"> <!--https://www.gamespot.com/articles/professor-layton-movie-gets-localized/1100-6328204/-->
         </div>
     </main>
     
 </body>
+<footer>
+    This site was made by Evelyn for her SI339 class.<br>
+</footer>
 </html>
