--- a/index.html
+++ b/index.html
@@ -6,29 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/icon.png" sizes="32x32">
+    <link rel="icon" href="images/icon.png" sizes="32x32"> <!--https://keroppirecippi.wordpress.com/-->
     <title>Home</title>
 </head>
 <body>
     <a class="skip" tabindex="0" href="#main">Skip To Main Content</a>
     <header>
         <nav>
-            <div class="logo_wrapper"><img src="images/icon.png" alt="keroppi logo"></div>
+            <div class="logo_wrapper"><img src="images/icon.png" alt="keroppi logo"> <!--https://keroppirecippi.wordpress.com/--> </div>
             <ul>
                 <li class="active"><a href = "index.html">Home</a></li>
                 <li><a href = "about_me.html">About Me</a></li>
                 <li><a href = "tier_list.html">Tier List</a></li>
             </ul>
         </nav>
-        <div id="cover">
+        <div id="cover"> <!--https://cutewallpaper.org/21/cute-keroppi-wallpaper/Download-Gambar-Wallpaper-Keroppi-Kumpulan-Wallpaper.html-->
             <h1>Home</h1>
         </div>
 
     </header>
     
     <main id="main">
-        Hello! Click <a href="about_me.html">here</a> to go to the "About Me" page, and click <a href = "tier_list.html">here</a> to go to my personal tier list of sanrio characters!
+        Hello! (This is a placeholder, I will add more here)
     </main>
     
 </body>
+<footer>
+    This site was made by Evelyn for her SI339 class.<br>
+</footer>
 </html>
