--- a/tier_list.html
+++ b/tier_list.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tier_list.css">
-    <link rel="icon" href="images/icon.png" sizes="32x32">
+    <link rel="icon" href="images/icon.png" sizes="32x32"> <!--https://keroppirecippi.wordpress.com/-->
     <title>Tier List</title>
 </head>
 <body>
     <a class="skip" tabindex="0" href="#main">Skip To Main Content</a>
     <header>
         <nav>
-            <div class="logo_wrapper"><img src="images/icon.png" alt="keroppi logo"></div>
+            <div class="logo_wrapper"><img src="images/icon.png" alt="keroppi logo"> <!--https://keroppirecippi.wordpress.com/--> </div>
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "about_me.html">About Me</a></li>
                 <li class="active"><a href = "tier_list.html">Tier List</a></li>
             </ul>
         </nav>
-        <div id="cover">
+        <div id="cover"> <!--https://cutewallpaper.org/21/cute-keroppi-wallpaper/Download-Gambar-Wallpaper-Keroppi-Kumpulan-Wallpaper.html-->
             <h1>Tier List</h1>
         </div>
 
@@ -116,4 +116,7 @@
     </main>
     
 </body>
+<footer>
+    This site was made by Evelyn for her SI339 class.<br>
+</footer>
 </html>
